2002-10-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/gradient-position.c (sp_gradient_position_motion_notify): Reset
	gradient relative transform to symmetric rectilinear if dragging

	* src/style.c (sp_style_merge_ipaint): Use "release" signal
	(sp_style_read_ipaint): Ditto

	* src/sp-pattern.c (sp_pattern_read_attr): Use "release" signal

	* src/sp-item.c (sp_item_read_attr): Use "release" signal

	* src/sp-image.c (autotrace_dialog): Connect "release" instead of "destroy"

	* src/sp-gradient.c (sp_gradient_href_release): Use "release" instead of "destroy"

2002-10-06  suzuki toshiya <mpsuzuki@hiroshima-u.ac.jp>

	* src/libnr/Makefile.am (libnr_a_SOURCES): added
	nr-gradient.h. (nr-gradient.c appeared twice.)
        
2002-10-04  Masatake YAMATO  <jet@gyve.org>

	* src/widgets/font-selector.c: Inlucded stdlib.h for atof.

2002-10-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-gradient.c (nr_rgradient_renderer_setup): Use different base renderers
	(nr_rgradient_render_block_symmetric): Split frontend
	(nr_rgradient_render_block_optimized): Ditto
	(nr_rgradient_render_generic_optimized): Asymmetric renderer

	* src/sp-object.c (sp_object_invoke_release): new frontend
	(sp_object_detach): release object
	(sp_object_detach_unref): Ditto

	* src/sp-object.h: Added ::release virtual method

	* src/sp-object.c (sp_object_invoke_shutdown): New method

2002-10-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item-group.c (sp_item_group_ungroup): Rewrite it, so it moves
	all non-items to main <defs> node, preserving logical order and building
	objects in correct sequence

	* src/desktop-affine.c: Methods for root coordinate system, fixes misplacement bug

	* src/libnrtype/nr-rasterfont.c: Made working

	* src/libnrtype/nr-font.c (nr_font_new_default): Do linking
	(nr_font_unref): Ditto

	* src/libnrtype/nr-type-directory.c (nr_typeface_unref): Moved here, implemented list
